<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/cal_paddin"
    android:paddingRight="@dimen/cal_paddin"
    android:paddingTop="@dimen/cal_paddin"
    android:paddingBottom="@dimen/cal_paddin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputl1"
          android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etidttextdatos"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_input_width"
            android:gravity="end|center_vertical"
            android:hint="@string/cal_hint_input"
            android:inputType="none"
            android:textIsSelectable="true"

            android:drawableEnd="@drawable/ic_backspace_black_36dp"
            android:drawablePadding="10dp"
            android:maxLength="16"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linelayoutuno"
        android:layout_width="@dimen/cal_btn_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textinputl1"

        >
        <Button
            android:id="@+id/btnsiete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_siete"/>
        <Button
            android:id="@+id/btncuatro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_cuatro"/>
        <Button
            android:id="@+id/btnuno"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_uno"/>
        <Button
            android:id="@+id/btnpunto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botonesblack"
            android:text="@string/cal_bt_punto"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linelayoutdos"
        android:layout_width="@dimen/cal_btn_size"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textinputl1"
        android:layout_toEndOf="@+id/linelayoutuno"
        >
        <Button
            android:id="@+id/btnocho"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_ocho"/>
        <Button
            android:id="@+id/btncinco"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_cinco"/>
        <Button
            android:id="@+id/btdos"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_dos"/>
        <Button
            android:id="@+id/btncero"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_cero"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativeuno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinputl1"
        android:layout_toEndOf="@+id/linelayoutdos"
        >
        <Button
            android:id="@+id/btnueve"
            android:layout_width="@dimen/cal_btn_size"
            android:layout_height="@dimen/cal_btn_size"
            android:theme="@style/botones"
            android:text="@string/cal_bt_nueve"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />
        <Button
            android:id="@+id/btlimpiar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cal_btn_size"
            android:text="@string/cal_bt_limpiar"
            android:theme="@style/botonesalerta"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/btnueve"
            />
        <LinearLayout
            android:id="@+id/linelayouttres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/btnueve"
            >
            <Button
                android:id="@+id/btseis"
                android:layout_width="@dimen/cal_btn_size"
                android:layout_height="@dimen/cal_btn_size"
                android:theme="@style/botones"
                android:text="@string/cal_bt_seis"/>
            <Button
                android:id="@+id/btndividir"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="@dimen/cal_btn_size"
                android:theme="@style/botonesblack"
                android:text="@string/cal_bt_dividir"/>
            <Button
                android:id="@+id/btmultiplicar"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="@dimen/cal_btn_size"
                android:theme="@style/botonesblack"
                android:textAllCaps="false"
                android:text="@string/cal_bt_multiplicar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linelayoutcuatro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linelayouttres"
            >
            <Button
                android:id="@+id/bttres"
                android:layout_width="@dimen/cal_btn_size"
                android:layout_height="@dimen/cal_btn_size"
                android:theme="@style/botones"
                android:text="@string/cal_bt_tres"/>
            <Button
                android:id="@+id/btnmenos"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="@dimen/cal_btn_size"
                android:theme="@style/botonesblack"
                android:text="@string/cal_bt_menos"/>

            <Button
                android:id="@+id/btsuma"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="@dimen/cal_btn_size"
                android:theme="@style/botonesblack"
                android:text="@string/cal_bt_mas"/>

        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btresultado"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cal_btn_size"
        android:theme="@style/botonesblackdos"
        android:layout_below="@+id/relativeuno"
        android:layout_toEndOf="@+id/linelayoutdos"
        android:text="@string/cal_bt_resultado"/>

    </RelativeLayout>
</RelativeLayout>